--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 <!-- END BUTTON --><!-- BUTTON -->
 <tr>
 	<tr>
-		<td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 18px; font-weight: 100; line-height: 24px; color: #888; padding-top: 35px; text-transform: uppercase;" align="center" valign="top">Valid through ?????? <br>
-			Don’t miss out on the Opportunity <br>
+		<td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 18px; font-weight: 100; line-height: 24px; color: #888; padding-top: 35px; text-transform: uppercase;" align="center" valign="top">Valid through March 1st <br>
+			Don’t miss out on this Opportunity <br>
 			Reward Your Passion!
 			</td>
 		</tr>
