--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
 <!-- Promo Code 'Grey Box' Table -->
 <table border="0" width="70%" cellspacing="0" cellpadding="0" align="center">
-<tbody>
-<tr>
-	<td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 80px; font-weight: 200; line-height: 80px; padding: 40px;color: #ccc;" align="center" valign="top" bgcolor="#151515" align="center">STCPE</td>
-<tr>
-</tr>
-</tbody>
+	<tbody>
+		<tr>
+			<td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 80px; font-weight: 200; line-height: 80px; padding: 40px;color: #ccc;" align="center" valign="top" bgcolor="#151515" align="center">STCPE</td>
+		<tr>
+	</tbody>
 </table>
+<!-- End 'Grey Box Table' -->
 <tr>
 <td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 18px; font-weight: 100; line-height: 24px; color: #888; padding-top: 10px; text-transform: uppercase;" align="center" valign="top">Valid for Only 48 Hours</td>
 </tr>
