--- a/index.html
+++ b/index.html
@@ -76,16 +76,17 @@
 <table border="0" width="70%" cellspacing="0" cellpadding="0" align="center">
 	<tbody>
 		<tr>
-			<td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 80px; font-weight: 200; line-height: 80px; padding: 40px;color: #ccc;" align="center" valign="top" bgcolor="#151515" align="center">STCPE</td>
+			<td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 80px; font-weight: 200; line-height: 80px; padding: 40px;color: #ccc;" align="center" valign="top" bgcolor="#151515" align="center">STBBPE</td>
 		<tr>
 	</tbody>
 </table>
 <!-- End 'Grey Box Table' -->
-<tr>
+<!-- <tr>
 <td style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, 'sans-serif'; font-size: 18px; font-weight: 100; line-height: 24px; color: #888; padding-top: 10px; text-transform: uppercase;" align="center" valign="top">Valid for Only 48 Hours</td>
-</tr>
+</tr> -->
 <tr>
 <td style="font-size: 0px; line-height: 0px;" align="center" valign="top" height="40"></td>
+
 </tr>
 <!-- BUTTON -->
 <tr>
